# drift

./: .gitignore  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  flake.nix
.claude-plugin/: marketplace.json
crates/drift-cli/: Cargo.toml
crates/drift-cli/src/: main.rs
crates/drift-cli/src/commands/: add.rs  adopt.rs  archive.rs  close.rs  commander.rs  daemon.rs  delete.rs  dispatch.rs  env.rs  events.rs  init.rs  list.rs  logs.rs  mod.rs  niri_rules.rs  notify.rs  open.rs  ports.rs  post_dispatch.rs  remove.rs  restore.rs  review.rs  save.rs  shell_data.rs  status.rs  task.rs  to.rs
crates/drift-cli/tests/: integration.rs
crates/drift-commander/: Cargo.toml
crates/drift-commander/examples/: mic_test.rs  smoke_test.rs  vad_debug.rs  vad_stt_test.rs
crates/drift-commander/src/: action.rs  audio.rs  command.rs  command_llm.rs  lib.rs  main.rs  models.rs  post_process.rs  vad.rs  voice.rs  wakeword.rs
crates/drift-commander/src/stt/: decoder.rs  mel.rs  mod.rs  tokenizer.rs  transcribe.rs
crates/drift-core/: Cargo.toml
crates/drift-core/src/: agent.rs  claude_trust.rs  commander.rs  config.rs  dispatch.rs  env.rs  events.rs  handoff.rs  kdl.rs  lib.rs  lifecycle.rs  niri.rs  paths.rs  post_dispatch.rs  project_state.rs  registry.rs  session.rs  supervisor.rs  sync.rs  tasks.rs  workspace.rs  workspace_names.rs  worktree.rs
crates/drift-core/src/driver/: claude_code.rs  codex.rs  mod.rs
crates/drift-daemon/: Cargo.toml
crates/drift-daemon/src/: daemon.rs  emit_listener.rs  event_stream.rs  lib.rs  state.rs  subscriber.rs
drift-shell/: DriftCommandBar.qml  DriftPanel.qml  DriftState.qml  DriftStatus.qml  DriftToast.qml  DriftToastManager.qml  qmldir
nix/: hm-module.nix  nixos-module.nix
plugins/drift-agent/.claude-plugin/: plugin.json
plugins/drift-agent/skills/drift-agent/: SKILL.md
plugins/drift/.claude-plugin/: plugin.json
plugins/drift/skills/drift/: SKILL.md
