[package]
name = "drift-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for drift workspace manager"
license = "MIT"
repository = "https://github.com/0xPD33/drift"

[[bin]]
name = "drift"
path = "src/main.rs"

[dependencies]
drift-core = { path = "../drift-core" }
drift-daemon = { path = "../drift-daemon" }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
toml = { workspace = true }
dirs = "6.0"
nix = { version = "0.29", features = ["signal", "process"] }
niri-ipc = "25.11"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
