[package]
name = "drift-commander"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drift-commander"
path = "src/main.rs"

[dependencies]
drift-core = { path = "../drift-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "3", features = ["json"] }
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
time = "0.3"
clap = { version = "4.5", features = ["derive"] }
portaudio = "0.8"
rustpotter = "3"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.17"
rustfft = "6.1"
# Pin half < 2.5 to avoid rand 0.8/0.9 conflict with candle-core 0.2.2
half = ">=2,<2.5"
