[package]
name = "drift-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
niri-ipc = "25.11"
dirs = "6.0"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
time = { version = "0.3", features = ["formatting"] }
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
