[package]
name = "drift-core"
version = "0.1.0"
edition = "2021"
description = "Core library for drift workspace manager"
license = "MIT"
repository = "https://github.com/0xPD33/drift"

[features]
default = ["overview", "dispatch"]
overview = []
dispatch = ["tasks", "worktree", "handoff", "post-dispatch", "review"]
tasks = []
worktree = []
handoff = []
post-dispatch = []
review = []
commander = []
drivers = []
drivers-claude = ["drivers"]
drivers-codex = ["drivers"]

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
niri-ipc = "25.11"
dirs = "6.0"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
time = { version = "0.3", features = ["formatting"] }
rand = "0.8"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
