[package]
name = "drift-daemon"
version = "0.1.0"
edition = "2021"
description = "Background daemon for drift workspace manager"
license = "MIT"
repository = "https://github.com/0xPD33/drift"

[dependencies]
drift-core = { path = "../drift-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
niri-ipc = "25.11"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
