[package]
name = "drift-daemon"
version = "0.1.0"
edition = "2021"
description = "Background daemon for drift workspace manager"
license = "MIT"
repository = "https://github.com/0xPD33/drift"

[features]
default = ["overview", "dispatch", "drivers-claude", "drivers-codex"]
overview = ["drift-core/overview"]
dispatch = ["drift-core/dispatch"]
drivers = ["drift-core/drivers"]
drivers-claude = ["drift-core/drivers-claude", "drivers"]
drivers-codex = ["drift-core/drivers-codex", "drivers"]

[dependencies]
drift-core = { path = "../drift-core", default-features = false }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
niri-ipc = "25.11"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
